--- a/app/views/settings/billing/index.html.erb
+++ b/app/views/settings/billing/index.html.erb
@@ -16,8 +16,8 @@
       <%= render "billing_fields" %>
 
       <div class="form-group">
-        <div class="control-label-big"></div>
-        <div class="controls" style="margin-left: 155px;">
+        <div class="control-label"></div>
+        <div class="controls" >
           <button type="submit" class="btn btn-large btn-primary">Save</button>
         </div>
       </div>
