--- a/app/views/settings/creditcard/index.html.erb
+++ b/app/views/settings/creditcard/index.html.erb
@@ -32,22 +32,22 @@
       <hr />
 
       <div class="form-group">
-        <%= label_tag :card_number, "Card Number", :class => "control-label-big", :for => "cardnumber" %>
-        <div class="controls" style="margin-left: 155px;">
+        <%= label_tag :card_number, "Card Number", :class => "control-label", :for => "cardnumber" %>
+        <div class="controls" >
           <input data-stripe="number" id="cardnumber" type="text" size="20" autocomplete="off" class="card-number round form-control" />
         </div>
       </div>
 
       <div class="form-group">
-        <%= label_tag :cvc, "CVC", :class => "control-label-big", :for => "cvc" %>
-        <div class="controls" style="margin-left: 155px;">
+        <%= label_tag :cvc, "CVC", :class => "control-label", :for => "cvc" %>
+        <div class="controls" >
           <input data-stripe="cvc" id="cvc" type="text" size="4" autocomplete="off" class="card-cvc round form-control" style="width: 60px;" />
         </div>
       </div>
 
       <div class="form-group">
-        <%= label_tag :Expiration, "Expiration (MM/YYYY)", :class => "control-label-big", :for => "Expiration" %>
-        <div class="controls" style="margin-left: 155px;">
+        <%= label_tag :Expiration, "Expiration (MM/YYYY)", :class => "control-label", :for => "Expiration" %>
+        <div class="controls" >
           <input data-stripe="exp-month" id="month" type="text" size="2" class="card-expiry-month round form-control" style="width: 40px; display: inline-block;" />
           <span> / </span>
           <input data-stripe="exp-year" id="year" type="text" size="4" class="card-expiry-year round form-control" style="width: 60px; display: inline-block;" />
@@ -55,8 +55,8 @@
       </div>
 
       <div class="form-group">
-        <div class="control-label-big"></div>
-        <div class="controls" style="margin-left: 155px;">
+        <div class="control-label"></div>
+        <div class="controls" >
           <button type="submit" id="cc_submit" class="btn btn-large btn-primary" >Save</button>
         </div>
       </div>
