--- a/app/views/products/helpers/_kpi_summary.html.erb
+++ b/app/views/products/helpers/_kpi_summary.html.erb
@@ -27,11 +27,11 @@
 
 
   <% if @version.semver_2 %>
-    <div class="flash success" style="margin-bottom: 20px;" >
+    <div class="flash success kpi_box" style="margin-bottom: 20px;" >
       This version number (<%= @product.version %>) fits <a href="http://semver.org">semantic versioning 2.0.0</a>!
     </div>
   <% else %>
-    <div class="flash error" style="margin-bottom: 20px;" >
+    <div class="flash error kpi_box" style="margin-bottom: 20px;" >
       This version number (<%= @product.version %>) doesn't fit <a href="http://semver.org">semantic versioning 2.0.0</a>!
     </div>
   <% end %>
