--- a/app/views/products/helpers/_kpis.html.erb
+++ b/app/views/products/helpers/_kpis.html.erb
@@ -1,7 +1,7 @@
 
 <div>
 
-  <div class="flash info l_margin_bottom_5" >
+  <div class="kpi_box flash info l_margin_bottom_5" >
     <b>Current:</b>
     <% if @product.version_newest && !@product.version_newest.to_s.eql?(@product.version.to_s) %>
       <a href="/<%= @product.language_esc %>/<%= @product.to_param %>/<%= @product.version_newest.to_s %>" ><%= @product.version_newest.to_s %></a>
@@ -13,14 +13,14 @@
   <% this_color_class = 'info' %>
   <% this_color_class = 'success' if @version && @version.semver_2 %>
   <% this_color_class = 'error' if @version && !@version.semver_2 %>
-  <div class="flash <%= this_color_class %>" style="margin-bottom: 5px;">
+  <div class="kpi_box flash <%= this_color_class %>" style="margin-bottom: 5px;">
     <b>This:</b> <%= @product.version %>
   </div>
 
 
   <% days_ago = @product.released_days_ago %>
   <% rel_bg = color_for_released_ago @product %>
-  <div class="flash <%= rel_bg %> l_margin_bottom_5"  >
+  <div class="kpi_box flash <%= rel_bg %> l_margin_bottom_5"  >
     <b title="<%= @product.released_ago_text %>" >Released:</b>
     <span title="<%= @product.released_ago_text %>">
       <% if @product.released_ago_in_words.nil? %>
@@ -38,7 +38,7 @@
   <% if !average_release_time.nil? && average_release_time > 0 %>
     <% art_text = "In average this dev team is releasing a new version every #{average_release_time} days." %>
   <% end %>
-  <div class="flash <%= art_bg %> l_margin_bottom_5">
+  <div class="kpi_box flash <%= art_bg %> l_margin_bottom_5">
     <b title="<%= art_text %>" >Avg. Rel. Time:</b>
     <span title="<%= art_text %>">
       <% if average_release_time.nil? || average_release_time == 0 %>
@@ -57,7 +57,7 @@
   <% ref_bg = 'warn'    if references >  0  and references < 10  %>
   <% ref_bg = 'error'   if references == 0 %>
   <% ref_text = "#{references} packages are referencing this project" %>
-  <div class="flash <%= ref_bg %> l_margin_bottom_5" >
+  <div class="kpi_box flash <%= ref_bg %> l_margin_bottom_5" >
     <b title="<%= ref_text %>">References:</b>
     <span title="<%= ref_text %>">
       <% if references > 0 %>
@@ -70,7 +70,7 @@
 <% end %>
 
 <% if Settings.instance.environment.to_s.eql?('enterprise') %>
-  <div class="flash info l_margin_bottom_5" >
+  <div class="kpi_box flash info l_margin_bottom_5" >
     <b title="<%= @product.project_usage %> projects are referencing this component.">Project Usage:</b>
     <span title="<%= ref_text %>">
       <% if @product.project_usage > 0 %>
@@ -90,14 +90,14 @@
   <% dep_bg = 'error' if main_dep_count >= 30 %>
   <% scope = Dependency.main_scope(@product.language) %>
   <% title_text = "#{main_dep_count} direct #{scope} dependencies" %>
-  <div class="flash <%= dep_bg %>" style="margin-bottom: 5px;">
+  <div class="kpi_box flash <%= dep_bg %>" style="margin-bottom: 5px;">
     <b title="<%= title_text %>">Dependencies:</b> <span title="<%= title_text %>"><%= main_dep_count %></span>
   </div>
 
   <% licenses = @product.licenses %>
   <% license_bg = 'info' %>
   <% license_bg = "error" if !licenses || licenses.empty? %>
-  <div class="flash <%= license_bg %> l_margin_bottom_5" >
+  <div class="kpi_box flash <%= license_bg %> l_margin_bottom_5" >
     <b title="license">License:</b>
     <% if licenses && !licenses.empty? %>
       <% licenses.each do |license| %>
@@ -112,7 +112,7 @@
     <% end %>
   </div>
 
-  <div class="flash info l_margin_bottom_5" >
+  <div class="kpi_box flash info l_margin_bottom_5" >
     <b title="<%= title_text %>">Language:</b>
     <% if Product::A_LANGS_LANGUAGE_PAGE.include?(@product.language) %>
       <a href="/<%= @product.language_esc %>" title="<%= @product.language_esc %>"><%= @product.language %></a>
