--- a/app/views/admin/submitted_urls/_decline_form.html.erb
+++ b/app/views/admin/submitted_urls/_decline_form.html.erb
@@ -6,14 +6,14 @@
     <div class = "form-group">
       <%= label_tag :url,nil, :class => 'control-label' %>
       <div class = "controls">
-        <%= text_field_tag :url, @submitted_url.url, :class => 'span4', :readonly => true %>
+        <%= text_field_tag :url, @submitted_url.url, :class => 'form-control', :readonly => true %>
       </div>
     </div>
 
     <div class = "form-group">
       <%= label_tag :declined_message, nil, :class => "control-label" %>
       <div class = "controls">
-        <%= text_area_tag :declined_message, nil, :size=>"27x4", :class => "span4" %>
+        <%= text_area_tag :declined_message, nil, :size=>"27x4", :class => "form-control" %>
       </div>
     </div>
 
