Adjust profile view for mobile.

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -56,7 +56,7 @@ $label_color: #666666;
 .map_for_user_profile{
 	z-index: 1;
 	border: 1px solid black;
-	width: 200px;
+	width: 100%;
   height: 200px;
   margin-bottom: 5px;
   margin-left: auto;
