--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,11 +12,11 @@
 
   <%= render "header" %>
 
-  <div class="col-md-3" style="border-top: 1px solid #ddd;" >
+  <div class="col-md-3 col-xs-12" style="border-top: 1px solid #ddd;" >
     <%= render "users/navi" %>
   </div>
 
-  <div class="col-md-9 content">
+  <div class="col-md-9 col-xs-12 content">
 
     <% if !@products.nil? && @products.size > 0 %>
     <div >
