--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,11 +1,11 @@
 <div class="row" style="margin-bottom: 20px;" >
-	<div class="col-md-3"  >
+	<div class="col-md-3 col-xs-12"  >
 		<%= link_to gravatar_image_tag( @user.email, :alt => @user.fullname, :class => 'round12', :gravatar => { :size => 200, :default => "#{Settings.instance.server_url}/profile_icon.png" }), user_path(@user) %><br/>
 		<% if signed_in? && current_user.id.to_s.eql?(@user.id.to_s) %>
 			<a href="http://gravatar.com/emails">Change profile picture</a><br/>
 		<% end %>
 	</div>
-	<div class="col-md-5" style="width: 424px;" >
+	<div class="col-md-5 col-xs-12"  >
 		<h2 ><%= @user.fullname %></h2>
 		<div>
 			<p><%= @user.description %></p>
@@ -19,11 +19,11 @@
 			<% end %>
 		</div>
 	</div>
-	<div class="col-md-3 pull-right" >
-		<div class="pull-right" >
+	<div class="col-md-3 col-xs-12 pull-right" >
+		
 			<% if @user.location && !@user.location.empty? %>
-				<div id="map_for_user_profile" class="map_for_user_profile round" ></div>
+				<div id="map_for_user_profile" class="map_for_user_profile round12" ></div>
 			<% end %>
-		</div>
+		
 	</div>
 </div>
