--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,11 @@
 
 <% if !@users.nil? && !@users.empty? %>
 
-  <div class="col-md-3" >
+  <div class="col-md-3 col-xs-12" >
     <%= render 'settings/navi' %>
   </div>
 
-  <div class="col-md-9">
+  <div class="col-md-9 col-xs-12">
 
     <div class="content_header_def" >
       User Management  
