Update font-awesome icons.

--- a/app/views/shared/_product_follow_mini.html.erb
+++ b/app/views/shared/_product_follow_mini.html.erb
@@ -16,5 +16,5 @@
     </button>
   </div>
 <% else %>
-  <button id="button_<%= product.prod_key %>" type="submit" class="btn btn-mini btn-link" onclick="load_dialog_follow('<%= product.name %>', '<%= product.prod_key %>', '<%= product.language %>');" ><i class="icon-check-empty"></i>&nbsp;Follow</button>
+  <button id="button_<%= product.prod_key %>" type="submit" class="btn btn-mini btn-link" onclick="load_dialog_follow('<%= product.name %>', '<%= product.prod_key %>', '<%= product.language %>');" ><i class="fa fa-square-o"></i>&nbsp;Follow</button>
 <% end %>
