--- a/app/views/user/projects/helpers/_project.html.erb
+++ b/app/views/user/projects/helpers/_project.html.erb
@@ -10,7 +10,7 @@
     <td>
       <%= link_to project.name, user_project_path(project, :child => 'summary'), :class => 'searchResultLink' %> 
       <% if project.public == false %>
-        <span class="icon-lock" title="Private VersionEye Project"></span>
+        <span class="fa fa-lock" title="Private VersionEye Project"></span>
       <% end %> 
       <% if project.sv_count_sum > 0 %>
         <span class="fa fa-shield" title="Security Alert!"> <%= project.sv_count_sum %>  </span>
