--- a/app/views/settings/delete/index.html.erb
+++ b/app/views/settings/delete/index.html.erb
@@ -11,7 +11,18 @@
 
   <div class="content" >
 
+    <div style="margin-bottom: 20px; text-align: center;">
+      <%= image_tag "sad_cat.png", :class => "round12", :style => "width: 90%" %>
+    </div>
+
     <%= form_tag(settings_destroy_path, :method => "post", :class => "form-horizontal") do  %>
+
+      <div class="form-group">
+        <%= label_tag :why, "Why?", :class => "control-label", :for => "why" %>
+        <div class="controls">
+          <%= text_area_tag :why, "", :id => "why", :class => "form-control" %>
+        </div>
+      </div>
 
       <div class="form-group">
         <%= label_tag :password, "Password", :class => "control-label", :for => "password" %>
