Add dont_go_cat to delete page.

--- a/app/views/settings/delete/index.html.erb
+++ b/app/views/settings/delete/index.html.erb
@@ -12,7 +12,7 @@
   <div class="content" >
 
     <div style="margin-bottom: 20px; text-align: center;">
-      <%= image_tag "sad_cat.png", :class => "round12", :style => "width: 90%" %>
+      <%= image_tag "dont_go_cat.jpg", :class => "round12", :style => "width: 90%" %>
     </div>
 
     <%= form_tag(settings_destroy_path, :method => "post", :class => "form-horizontal") do  %>
