Update Landing Page.

--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -65,6 +65,11 @@
                     <div class="intro-message">
                         <h1>Version<span style="color: orange;">Eye</span></h1>
                         <%= render "/products/helpers/big_search" %>
+                        <p style="text-align: center; font-size: 24px;">
+                            <a href="#version_notifications">
+                             <i class="fa fa-arrow-circle-o-down"></i>
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -101,10 +106,14 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h3>VersionEye Enterprise</h3>
+                    <h2 class="section-heading">VersionEye Enterprise</h2>
 
                     <p class="lead" >
                         We're also offering an on-premises version of VersionEye. More information is available at our <%= link_to 'VersionEye Enterprise', enterprise_path %> page!
+                    </p>
+
+                    <p class="lead" >
+                        For any question send us a message to <span style="font-weight: bold;">contact [at] versioneye [dot] com</span> or contact us on <a href="https://twitter.com/VersionEye">Twitter</a>.
                     </p>
 
                 </div>
