--- a/app/views/shared/_feature_security.html.erb
+++ b/app/views/shared/_feature_security.html.erb
@@ -7,10 +7,10 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">Security Notifications</h2>
             <p class="lead">
-                Nowadays software projects are based on up to 100 open source 
-components or even more! How do you know that you are using a dependency which has 
-a security vulnerability? You don't! VersionEye is checking multiple security databases 
-every day and knows which components are vulnerable. VersionEye can monitor your project and send you security 
+                Nowadays software projects are based on many open source 
+libraries! How do you ensure that you are not using dependencies which has 
+security vulnerabilities? You don't! VersionEye is checking multiple security databases 
+every day and knows which artifacts are vulnerable. VersionEye can monitor your project and send you security 
 notifications if one of your dependencies has a known security vulnerability. <br/>
 This feature currently only works for PHP. 
             </p>
