--- a/app/views/shared/_feature_version.html.erb
+++ b/app/views/shared/_feature_version.html.erb
@@ -1,10 +1,10 @@
 
-<div class="container">
+<div class="container" id="version_notifications">
     <div class="row">
         <div class="col-lg-5 col-sm-6">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Version Notifications</h2>
+            <h2 class="section-heading" >Version Notifications</h2>
             <p class="lead">
               VersionEye notifies you about outdated dependencies in your software projects. Nowadays software projects are based on many open source and self developed components. Checking manually for updates for these components is a very time consuming task and not fun at all! VersionEye notifies software developers via email about outdated dependencies in their projects. That way they can save a lot of time and focus on development.
             </p>
