Update typo for contact email address to prevent from bots.

--- a/app/views/page/impressum.html.erb
+++ b/app/views/page/impressum.html.erb
@@ -12,7 +12,7 @@
       68163 Mannheim<br/>
       Germany<br/>
       <br/>
-      E-Mail: contact [at] versioneye.com<br />
+      E-Mail: contact [at] versioneye [dot] com<br />
       Tel: +49 621 18068183<br />
       <br />
       Amtsgericht: Mannheim<br />
