--- a/app/views/shared/_dialog_follow.html.erb
+++ b/app/views/shared/_dialog_follow.html.erb
@@ -1,28 +1,33 @@
-<div class="modal hide fade" id="dialog_follow" tabindex="-1"
-	role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Follow</h3>
-  </div>
-  <div class="modal-body" >
+<div class="modal fade" id="dialog_follow" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+	
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">Follow</h3>
+      </div>
+      <div class="modal-body" >
 
-    <div>
-      Follow
-      <span id="product_to_follow" style="font-weight: bold; font-size: 20px;"></span>
-      to get notified about new versions.
+        <div>
+          Follow
+          <span id="product_to_follow" style="font-weight: bold; font-size: 20px;"></span>
+          to get notified about new versions.
+        </div>
+
+        <div style="padding: 20px 0;">
+          <%= render 'shared/login_with_github' %>
+          <%= render 'shared/login_with_bitbucket' %>
+        </div>
+
+        <div>
+          Or <a href="/signup">sign up</a> for free with your <a href="/signup">email address</a>.
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+      </div>
+
     </div>
-
-    <div style="padding: 20px 0;">
-      <%= render 'shared/login_with_github' %>
-      <%= render 'shared/login_with_bitbucket' %>
-    </div>
-
-    <div>
-      Or <a href="/signup">sign up</a> with your <a href="/signup">email address</a>.
-    </div>
-
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
   </div>
 </div>
