Change follow dialog.

--- a/app/views/shared/_dialog_follow.html.erb
+++ b/app/views/shared/_dialog_follow.html.erb
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-          Or <a href="/signup">sign up</a> for free with your <a href="/signup">email address</a>.
+          Or <a href="/signup">sign up</a> with your email address. <span style="font-weight: bold;">It's free!</span>
         </div>
 
       </div>
