make "notify me about new versions" button bigger.

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -133,3 +133,10 @@ h3.side_header{
   width: 150px;
   margin-left: -40px;
 }
+
+.notifyme {
+  height: 60px;
+  width: 100%;
+  font-size: 30px; 
+  font-weight: bold; 
+}
