--- a/app/views/products/_product_show_followers.html.erb
+++ b/app/views/products/_product_show_followers.html.erb
@@ -18,7 +18,7 @@
     <% end %>
   <% end %>
   <% if @product.users.count > 16 %>
-    <br/>and more ...
+    and more ...
   <% end %>
 </div>
 <% end %>
