--- a/app/views/products/cocoapods/_product_show_dependencies.html.erb
+++ b/app/views/products/cocoapods/_product_show_dependencies.html.erb
@@ -6,6 +6,7 @@
 	<div class="col-md-12">
 		<h5 class="dep_header">
 			<%= pluralize( main_dependencies.count, 'Compile Dependencies') %>
+      <%= render :partial => "shared/dependency_badge", :locals => { :project => @product } %>
 		</h5>
 	</div>
 	<div class="col-md-12" >
